# Txarr

./: Dockerfile  LICENSE  README.md  pyproject.toml
txarr/: main.py
